practice3/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: practice3
  labels:
    app.kubernetes.io/part-of: practice3-idempotency
