practice3/k8s/service-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: practice3
  labels:
    app: gateway
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - name: http
      port: 8000
      targetPort: http
