practice3/k8s/service-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker
  namespace: practice3
  labels:
    app: worker
spec:
  type: ClusterIP
  selector:
    app: worker
  ports:
    - name: metrics
      port: 9090
      targetPort: metrics
